[package]
name = "at"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
dirs = "6.0.0"
hcl-rs = "0.19.2"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["blocking", "json"]}
serde = "1.0.219"
tempfile = "3.20.0"
zip = "4.2.0"
openssl = { version = "0.10.72", features = ["vendored"] } 

