[package]
name = "at"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
dirs = "6.0.0"
hcl-rs = "0.18.6"
regex = "1.11.2"
reqwest = { version = "0.12.23", features = ["blocking", "json"]}
serde = "1.0.223"
tempfile = "3.21.0"
zip = "4.5.0"
openssl = { version = "0.10.72", features = ["vendored"] } 

